# Medical_Chatbot

./: .gitignore  README.md  app.py  pyproject.toml  rag.py  requirements.txt
vectorstore/cks_faiss/: index.faiss  index.pkl
